# test-ai-development

./: .ai-review.yaml  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ai-review.yml  opencode-pr-review.yml  opencode.yml  test.yml
docs/prompts/: inline-strict.md
